@@ -1,6 +1,8 @@
 Revision history for Devel-INC-Sorted
 
 {{$NEXT}}
+              - fix use of Exporter that breaks with newer Test::More in tests
+                (RT#117544)
 
 0.02          2008-06-26
               - Requires Perl 5.8 and above (stable sort)
